syntax = "proto3";

message SophonManifestProto
{
    repeated SophonManifestAssetProperty Assets = 1;
}

message SophonManifestAssetProperty
{
             string                   AssetName    = 1; // Path to the file relative to the game directory
    repeated SophonManifestAssetChunk AssetChunks  = 2;
             uint32                   AssetType    = 3; // 0 for files, 64 for directories. No other values were ever observed
             uint64                   AssetSize    = 4; // Size of the entire file
             string                   AssetHashMd5 = 5; // MD5 checksum of the entire file
}

message SophonManifestAssetChunk
{
    string ChunkName                = 1;
    string ChunkDecompressedHashMd5 = 2; // MD5 checksum of the uncompressed chunk data
    uint64 ChunkOnFileOffset        = 3; // Offset at which this chunk should be put into the resulting file
    uint64 ChunkSize                = 4; // Size of the compressed chunk
    uint64 ChunkSizeDecompressed    = 5; // Size of the uncompressed chunk
    uint64 ChunkCompressedHashXxh   = 6; // not an xxh64 checlsum of the compressed data
    string ChunkCompressedHashMd5   = 7; // MD5 checksum of the compressed chunk data
}
